--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -620,6 +620,7 @@
     &lt;hugepages&gt;
       &lt;page size="1" unit="G" nodeset="0-3,5"/&gt;
       &lt;page size="2" unit="M" nodeset="4"/&gt;
+    &lt;/hugepages&gt;
     &lt;nosharepages/&gt;
     &lt;locked/&gt;
   &lt;/memoryBacking&gt;
