--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2250,6 +2250,10 @@ exit 0
 %doc examples/systemtap
 
 %changelog
+* Sun Aug  3 2014 Daniel Veillard <veillard@redhat.com> - 1.2.7-1
+- Introduce virConnectGetDomainCapabilities
+- many improvements and bug fixes
+
 * Wed Jul  2 2014 Daniel Veillard <veillard@redhat.com> - 1.2.6-1
 - libxl: add migration support and fixes
 - various improvements and fixes for NUMA
