Fix vlanid attribute name in nwfilter docs
'vlanid' is the attribute name in our XML,
'vlan-id' is the ebtables attribute:

[root@localhost ~]# virsh nwfilter-dumpxml myself
<filter name='myself' chain='root'>
  <uuid>7192ef51-cd50-4f14-ad7b-fa5c69ea19e3</uuid>
  <rule action='accept' direction='in' priority='500'>
    <vlan dstmacaddr='00:11:22:33:44:55' vlanid='44'/>
  </rule>
</filter>

[root@localhost ~]# ebtables -t nat -L
Bridge table: nat

...
-p 802_1Q -d 0:11:22:33:44:55 --vlan-id 44 -j ACCEPT

https://bugzilla.redhat.com/show_bug.cgi?id=1126721

Signed-off-by: Ján Tomko <jtomko@redhat.com>

--- a/docs/formatnwfilter.html.in
+++ b/docs/formatnwfilter.html.in
@@ -765,7 +765,7 @@
          <td>Mask applied to MAC address of destination</td>
        </tr>
        <tr>
-         <td>vlan-id</td>
+         <td>vlanid</td>
          <td>UINT16 (0x0-0xfff, 0 - 4095)</td>
          <td>VLAN ID</td>
        </tr>
