docs: nwfilter: add missing dscp attribute
Added attribute dscp to below supported protocols table in nwfilter docs.
IPV4 (ip)
TCP/UDP/SCTP (tcp/udp/sctp)
ICMP (icmp)
IGMP,ESP,AH,UDPLITE,'ALL' (igmp,esp,ah,udplite,all)
TCP/UDP/SCTP over IPV6 (tcp-ipv6,udp-ipv6,sctp-ipv6)
ICMPV6 (icmpv6)
IGMP,ESP,AH,UDPLITE,'ALL' over IPv6 (igmp-ipv6,esp-ipv6,ah-ipv6,udplite-ipv6,all-ipv6)

Here is a simple example:
[root@localhost ~]# virsh nwfilter-dumpxml myself
<filter name='myself' chain='root'>
  <uuid>7192ef51-cd50-4f14-ad7b-fa5c69ea19e3</uuid>
  <rule action='accept' direction='in' priority='500'>
    <ip dscp='1'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <tcp dscp='1'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <tcp-ipv6 dscp='2'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <icmp dscp='55'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <icmpv6 dscp='55'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <udp dscp='3'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <udp-ipv6 dscp='4'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <udplite dscp='5'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <udplite-ipv6 dscp='6'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <esp dscp='7'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <esp-ipv6 dscp='8'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <ah dscp='9'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <ah-ipv6 dscp='10'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <sctp dscp='11'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <sctp-ipv6 dscp='55'/>
  </rule>
  <rule action='accept' direction='in' priority='500'>
    <igmp dscp='55'/>
  </rule>
  <rule action='accept' direction='in' priority='500

--- a/docs/formatnwfilter.html.in
+++ b/docs/formatnwfilter.html.in
@@ -1101,6 +1101,11 @@
          <td>End of range of valid destination ports; requires <code>protocol</code></td>
        </tr>
        <tr>
+         <td>dscp</td>
+         <td>UINT8 (0x0-0x3f, 0 - 63)</td>
+         <td>Differentiated Services Code Point</td>
+       </tr>
+       <tr>
          <td>comment <span class="since">(Since 0.8.5)</span></td>
          <td>STRING</td>
          <td>text with max. 256 characters</td>
@@ -1284,6 +1289,11 @@
          <td>End of range of valid destination ports</td>
        </tr>
        <tr>
+         <td>dscp</td>
+         <td>UINT8 (0x0-0x3f, 0 - 63)</td>
+         <td>Differentiated Services Code Point</td>
+       </tr>
+       <tr>
          <td>comment <span class="since">(Since 0.8.5)</span></td>
          <td>STRING</td>
          <td>text with max. 256 characters</td>
@@ -1399,6 +1409,11 @@
          <td>ICMP code</td>
        </tr>
        <tr>
+         <td>dscp</td>
+         <td>UINT8 (0x0-0x3f, 0 - 63)</td>
+         <td>Differentiated Services Code Point</td>
+       </tr>
+       <tr>
          <td>comment <span class="since">(Since 0.8.5)</span></td>
          <td>STRING</td>
          <td>text with max. 256 characters</td>
@@ -1496,6 +1511,11 @@
          <td>dstipto</td>
          <td>IP_ADDR</td>
          <td>End of range of destination IP address</td>
+       </tr>
+       <tr>
+         <td>dscp</td>
+         <td>UINT8 (0x0-0x3f, 0 - 63)</td>
+         <td>Differentiated Services Code Point</td>
        </tr>
        <tr>
          <td>comment <span class="since">(Since 0.8.5)</span></td>
@@ -1604,6 +1624,11 @@
          <td>End of range of valid destination ports</td>
        </tr>
        <tr>
+         <td>dscp</td>
+         <td>UINT8 (0x0-0x3f, 0 - 63)</td>
+         <td>Differentiated Services Code Point</td>
+       </tr>
+       <tr>
          <td>comment <span class="since">(Since 0.8.5)</span></td>
          <td>STRING</td>
          <td>text with max. 256 characters</td>
@@ -1705,6 +1730,11 @@
          <td>ICMPv6 code</td>
        </tr>
        <tr>
+         <td>dscp</td>
+         <td>UINT8 (0x0-0x3f, 0 - 63)</td>
+         <td>Differentiated Services Code Point</td>
+       </tr>
+       <tr>
          <td>comment <span class="since">(Since 0.8.5)</span></td>
          <td>STRING</td>
          <td>text with max. 256 characters</td>
@@ -1787,6 +1817,11 @@
          <td>dstipto</td>
          <td>IPV6_ADDR</td>
          <td>End of range of destination IP address</td>
+       </tr>
+       <tr>
+         <td>dscp</td>
+         <td>UINT8 (0x0-0x3f, 0 - 63)</td>
+         <td>Differentiated Services Code Point</td>
        </tr>
        <tr>
          <td>comment <span class="since">(Since 0.8.5)</span></td>
