--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -1555,14 +1555,14 @@
       &lt;source protocol="rbd" name="image_name2"&gt;
         &lt;host name="hostname" port="7000"/&gt;
       &lt;/source&gt;
-      &lt;target dev="hdd" bus="ide"/&gt;
+      &lt;target dev="hdc" bus="ide"/&gt;
       &lt;auth username='myuser'&gt;
         &lt;secret type='ceph' usage='mypassid'/&gt;
       &lt;/auth&gt;
     &lt;/disk&gt;
     &lt;disk type='block' device='cdrom'&gt;
       &lt;driver name='qemu' type='raw'/&gt;
-      &lt;target dev='hdc' bus='ide' tray='open'/&gt;
+      &lt;target dev='hdd' bus='ide' tray='open'/&gt;
       &lt;readonly/&gt;
     &lt;/disk&gt;
     &lt;disk type='network' device='cdrom'&gt;
@@ -1570,7 +1570,7 @@
       &lt;source protocol="http" name="url_path"&gt;
         &lt;host name="hostname" port="80"/&gt;
       &lt;/source&gt;
-      &lt;target dev='hdc' bus='ide' tray='open'/&gt;
+      &lt;target dev='hde' bus='ide' tray='open'/&gt;
       &lt;readonly/&gt;
     &lt;/disk&gt;
     &lt;disk type='network' device='cdrom'&gt;
@@ -1578,7 +1578,7 @@
       &lt;source protocol="https" name="url_path"&gt;
         &lt;host name="hostname" port="443"/&gt;
       &lt;/source&gt;
-      &lt;target dev='hdc' bus='ide' tray='open'/&gt;
+      &lt;target dev='hdf' bus='ide' tray='open'/&gt;
       &lt;readonly/&gt;
     &lt;/disk&gt;
     &lt;disk type='network' device='cdrom'&gt;
@@ -1586,7 +1586,7 @@
       &lt;source protocol="ftp" name="url_path"&gt;
         &lt;host name="hostname" port="21"/&gt;
       &lt;/source&gt;
-      &lt;target dev='hdc' bus='ide' tray='open'/&gt;
+      &lt;target dev='hdg' bus='ide' tray='open'/&gt;
       &lt;readonly/&gt;
     &lt;/disk&gt;
     &lt;disk type='network' device='cdrom'&gt;
@@ -1594,7 +1594,7 @@
       &lt;source protocol="ftps" name="url_path"&gt;
         &lt;host name="hostname" port="990"/&gt;
       &lt;/source&gt;
-      &lt;target dev='hdc' bus='ide' tray='open'/&gt;
+      &lt;target dev='hdh' bus='ide' tray='open'/&gt;
       &lt;readonly/&gt;
     &lt;/disk&gt;
     &lt;disk type='network' device='cdrom'&gt;
@@ -1602,7 +1602,7 @@
       &lt;source protocol="tftp" name="url_path"&gt;
         &lt;host name="hostname" port="69"/&gt;
       &lt;/source&gt;
-      &lt;target dev='hdc' bus='ide' tray='open'/&gt;
+      &lt;target dev='hdi' bus='ide' tray='open'/&gt;
       &lt;readonly/&gt;
     &lt;/disk&gt;
     &lt;disk type='block' device='lun'&gt;
@@ -1616,12 +1616,12 @@
       &lt;source dev='/dev/sda'/&gt;
       &lt;geometry cyls='16383' heads='16' secs='63' trans='lba'/&gt;
       &lt;blockio logical_block_size='512' physical_block_size='4096'/&gt;
-      &lt;target dev='hda' bus='ide'/&gt;
+      &lt;target dev='sdb' bus='ide'/&gt;
     &lt;/disk&gt;
     &lt;disk type='volume' device='disk'&gt;
       &lt;driver name='qemu' type='raw'/&gt;
       &lt;source pool='blk-pool0' volume='blk-pool0-vol0'/&gt;
-      &lt;target dev='hda' bus='ide'/&gt;
+      &lt;target dev='sdc' bus='ide'/&gt;
     &lt;/disk&gt;
     &lt;disk type='network' device='disk'&gt;
       &lt;driver name='qemu' type='raw'/&gt;
@@ -1641,7 +1641,7 @@
       &lt;auth username='myuser'&gt;
         &lt;secret type='iscsi' usage='libvirtiscsi'/&gt;
       &lt;/auth&gt;
-      &lt;target dev='sda' bus='scsi'/&gt;
+      &lt;target dev='vdb' bus='scsi'/&gt;
     &lt;/disk&gt;
     &lt;disk type='volume' device='disk'&gt;
       &lt;driver name='qemu' type='raw'/&gt;
@@ -1649,7 +1649,7 @@
       &lt;auth username='myuser'&gt;
         &lt;secret type='iscsi' usage='libvirtiscsi'/&gt;
       &lt;/auth&gt;
-      &lt;target dev='vda' bus='virtio'/&gt;
+      &lt;target dev='vdc' bus='virtio'/&gt;
     &lt;/disk&gt;
     &lt;disk type='volume' device='disk'&gt;
       &lt;driver name='qemu' type='raw'/&gt;
@@ -1657,7 +1657,7 @@
       &lt;auth username='myuser'&gt;
         &lt;secret type='iscsi' usage='libvirtiscsi'/&gt;
       &lt;/auth&gt;
-      &lt;target dev='vda' bus='virtio'/&gt;
+      &lt;target dev='vdd' bus='virtio'/&gt;
     &lt;/disk&gt;
     &lt;disk type='file' device='disk'&gt;
       &lt;driver name='qemu' type='qcow2'/&gt;
@@ -1671,7 +1671,7 @@
           &lt;backingStore/&gt;
         &lt;/backingStore&gt;
       &lt;/backingStore&gt;
-      &lt;target dev='vda' bus='virtio'/&gt;
+      &lt;target dev='vde' bus='virtio'/&gt;
     &lt;/disk&gt;
   &lt;/devices&gt;
   ...</pre>
