libvirtd: conf: Mention support for logging into journald
Our docs didn't mention the explicit option to log into journald.

--- a/daemon/libvirtd.conf
+++ b/daemon/libvirtd.conf
@@ -342,6 +342,8 @@
 #      use syslog for the output and use the given name as the ident
 #    x:file:file_path
 #      output to a file, with the given filepath
+#    x:journald
+#      output to journald logging system
 # In all case the x prefix is the minimal level, acting as a filter
 #    1: DEBUG
 #    2: INFO
