docs: fix missing forward slash
   Should like below:
    <interface type='server'>
      <mac address='52:54:00:22:c9:42'/>
      <source address='192.168.0.1' port='5558'/>
    </interface>
    ...
    <interface type='client'>
      <mac address='52:54:00:8b:c9:51'/>
      <source address='192.168.0.1' port='5558'/>
    </interface>

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -3701,12 +3701,12 @@
   ...
   &lt;devices&gt;
     &lt;interface type='server'&gt;
-      &lt;mac address='52:54:00:22:c9:42'&gt;
+      &lt;mac address='52:54:00:22:c9:42'/&gt;
       &lt;source address='192.168.0.1' port='5558'/&gt;
     &lt;/interface&gt;
     ...
     &lt;interface type='client'&gt;
-      &lt;mac address='52:54:00:8b:c9:51'&gt;
+      &lt;mac address='52:54:00:8b:c9:51'/&gt;
       &lt;source address='192.168.0.1' port='5558'/&gt;
     &lt;/interface&gt;
   &lt;/devices&gt;
